# voltcraft-cm2016

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: com.kernelerror.cm2016.desktop  com.kernelerror.cm2016.metainfo.xml
docs/: manual.md
po/: POTFILES.in  cm2016.pot  de.po  es.po  fr.po  it.po  nl.po  pl.po
src/cm2016/: __init__.py  app.py  i18n.py  protocol.py  serial_reader.py  session.py  style.css
src/cm2016/export/: __init__.py  csv_export.py  excel_export.py  printer.py
src/cm2016/persistence/: __init__.py  file_io.py  temp_buffer.py
src/cm2016/widgets/: __init__.py  chart_toolbar.py  chart_widget.py  data_table.py  port_dialog.py  slot_panel.py  slot_sidebar.py
tests/: conftest.py  test_chart_fixes.py  test_chart_widget.py  test_csv_export.py  test_data_table.py  test_disconnect_timeout.py  test_excel_callback.py  test_excel_export.py  test_file_io.py  test_i18n.py  test_printer.py  test_protocol.py  test_serial_reader.py  test_session.py  test_session_threading.py  test_temp_buffer.py
